Migration to spring boot 2.